fix: refactor code for consistency and readability in app.js, index.html, index.quiz.js, style.css, and www

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 /* 引入 Google Fonts */
-@import url('https://fonts.loli.net/css2?family=Bangers&family=Bungee&family=Luckiest_Guy&family=ZCOOL+KuaiLe&family=ZCOOL+QingKe+HuangYou&family=Caprasimo&display=swap');
+@import url('https://fonts.loli.net/css2?family=Bungee&family=ZCOOL+KuaiLe&family=Caprasimo&display=swap');
 
 *, *::before, *::after {
     box-sizing: border-box;
@@ -159,6 +159,12 @@ button:active {
     font-size: 12px;
     margin-bottom: 5px;
     color: var(--blue);
+}
+
+.hint-action-link {
+    text-decoration: underline;
+    color: #06c;
+    cursor: pointer;
 }
 
 .quiz-actions {
